--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <ul>
             <li>
               <span>Complété</span>
-              <span>2021 - En cours</span>
+              <span>2022 - En cours</span>
             </li>
             <li>
               <span>Type</span>
@@ -93,7 +93,7 @@
           </div>
           <div class="description">
             <h3>CarbonFreeConf</h3>
-            <p>CarbonFreeConf est une solution de conférences en ligne avec une empreinte carbone zéro.</p>
+            <p>CarbonFreeConf est un projet alternatif sur lequel je travaille depuis le début de l'année. Il s'agit d'une solution de conférences en ligne avec une empreinte carbone zéro.</p>
           </div>
         </div>
       </main>
