--- a/les_ptits_coquelicots.html
+++ b/les_ptits_coquelicots.html
@@ -20,7 +20,7 @@
         <a href="/" class="logo">
           <svg viewBox="0 0 132.12 45.6"><path d="M5.7 45.6H0V0h5.7l7 26.76V0h5.7v45.6h-5.7l-7-26.76ZM28.08 45.6h-5.7V0h5.7ZM34.86 45.6 32 42.78v-40L34.86 0h11.46l2.82 2.82v8.52h-5.7v-5l-.66-.66H38.4l-.66.66v32.84l.66.66h4.38l.66-.66v-5h5.7v8.58l-2.82 2.84ZM66.9 0l2.82 2.82v40L66.9 45.6H55.44l-2.82-2.82v-40L55.44 0ZM64 6.42l-.66-.66H59l-.66.66v32.82l.66.66h4.3l.66-.66ZM90.06 39.9v5.7H73.68V0h5.76v39.9ZM112.74 45.6h-5.64l-2-11.4h-6.28L96.9 45.6h-5.64L99.12 0h5.64Zm-13-17.16h4.32l-2.16-12.78ZM132.12 11.4h-5.76v-5l-.66-.66h-4.38l-.66.66v12.9l.66.66h7.92l2.88 2.82v20l-2.88 2.82h-11.4L115 42.78v-8.52h5.7v5l.66.66h4.38l.66-.66V26.34l-.66-.66h-7.86L115 22.8v-20l2.84-2.8h11.4l2.88 2.82Z"/></svg>
         </a>
-        <h1>Webdesigner / UI / UX</h1>
+        <h1>Front-end</h1>
         <h2>/ À propos</h2>
         <p>Un jour, mon cerveau gauche et mon cerveau droit ont signé un pacte de coopération. Depuis je conçois et développe des sites, engageants et modernes, pour que les utilisateurs aient le béguin et se souviennent de leur passage.
         </p>
