--- a/index.html
+++ b/index.html
@@ -1,128 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nicolas Bertolino - Webdesigner</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;0,600;1,500;1,600&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="https://use.typekit.net/aql1omp.css">
-  </head>
 
-  <body data-barba="wrapper">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nicolas Bertolino - Front-end Developer</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="styles/index.css">
+  <link href="https://api.fontshare.com/v2/css?f[]=satoshi@700,400&display=swap" rel="stylesheet">
+</head>
 
-    <div class="wrapper">
-      <header>
-        <a href="/" class="logo">
-          <svg viewBox="0 0 132.12 45.6"><path d="M5.7 45.6H0V0h5.7l7 26.76V0h5.7v45.6h-5.7l-7-26.76ZM28.08 45.6h-5.7V0h5.7ZM34.86 45.6 32 42.78v-40L34.86 0h11.46l2.82 2.82v8.52h-5.7v-5l-.66-.66H38.4l-.66.66v32.84l.66.66h4.38l.66-.66v-5h5.7v8.58l-2.82 2.84ZM66.9 0l2.82 2.82v40L66.9 45.6H55.44l-2.82-2.82v-40L55.44 0ZM64 6.42l-.66-.66H59l-.66.66v32.82l.66.66h4.3l.66-.66ZM90.06 39.9v5.7H73.68V0h5.76v39.9ZM112.74 45.6h-5.64l-2-11.4h-6.28L96.9 45.6h-5.64L99.12 0h5.64Zm-13-17.16h4.32l-2.16-12.78ZM132.12 11.4h-5.76v-5l-.66-.66h-4.38l-.66.66v12.9l.66.66h7.92l2.88 2.82v20l-2.88 2.82h-11.4L115 42.78v-8.52h5.7v5l.66.66h4.38l.66-.66V26.34l-.66-.66h-7.86L115 22.8v-20l2.84-2.8h11.4l2.88 2.82Z"/></svg>
-        </a>
-        <h1>Front-end</h1>
-        <h2>/ À propos</h2>
-        <p>Un jour, mon cerveau gauche et mon cerveau droit ont signé un pacte de coopération. Depuis je conçois et développe des sites, engageants et modernes, pour que les utilisateurs aient le béguin et se souviennent de leur passage.
-        </p>
-        <p>Dans une précédente vie, j'étudiais la sociologie et l'anthropologie. J'aime tenir compte de ce que nous apprennent les sciences humaines sur nos façons de penser et de faire des choix.</p>
-        <nav>
-          <h2>/ Réalisations</h2>
-          <ul>
-            <li>
-              <a href="/" data-number="05">
-                <span>CarbonFreeConf</span>
-                <span>UI / UX / Intégration</span>
-              </a>
-            </li>
-            <li>
-              <a href="vente_immobilier" data-number="04">
-                <span>Vente Immobilier</span>
-                <span>UI / UX / Intégration</span>
-              </a>
-            </li>
-            <li>
-              <a href="demenagements_aubin" data-number="03">
-                <span>Déménagements Aubin</span>
-                <span>UI / UX / Intégration</span>
-              </a>
-            </li>
-            <li>
-              <a href="black_march" data-number="02">
-                <span>Black March</span>
-                <span>UI / UX / Intégration</span>
-              </a>
-            </li>
-            <li>
-              <a href="les_ptits_coquelicots" data-number="01">
-                <span>Les p'tits Coquelicots</span>
-                <span>UI / UX / Logo / Intégration</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-
-      <main data-barba="container">
-        <figure data-number="05">
-          <img src="img/carbonfreeconf.jpg" alt="Une main prend des notes devant un écran d'ordinateur">
-        </figure>
-        <div>
-          <ul>
-            <li>
-              <span>Complété</span>
-              <span>2022 - En cours</span>
-            </li>
-            <li>
-              <span>Type</span>
-              <span>Application dynamique</span>
-            </li>
-            <li>
-              <span>Rôle</span>
-              <span>
-                <span>Charte graphique</span>
-                <span>Intégration</span>
-              </span>
-            </li>
-            <li>
-              <span>Client</span>
-              <span>CarbonFreeConf</span>
-            </li>
-          </ul>
-          <div class="website">
-            <a href="https://www.carbonfreeconf.com/" target="_blank" rel="noopener">Voir le site</a>
-          </div>
-          <div class="description">
-            <h3>CarbonFreeConf</h3>
-            <p>CarbonFreeConf est un projet alternatif sur lequel je travaille depuis le début de l'année. Il s'agit d'une solution de conférences en ligne avec une empreinte carbone zéro.</p>
-          </div>
-        </div>
-      </main>
+<body>
+  <div class="wrapper">
+    <h1 class="line">
+      <span>Nicolas Bertolino</span>
+    </h1>
+    <p class="line">
+      <span>Frontend developer with a knack</span>
+    </p>
+    <p class="line">
+      <span>for crafting engaging user experiences.</span>
+    </p>
+    <div class="line">
+      <ul>
+        <li>
+          <a href="https://github.com/nicolasbertolino" target="_blank" rel="noopener">Github</a>
+        </li>
+        <span>/</span>
+        <li>
+          <a href="https://www.linkedin.com/in/nicolasbertolino" target="_blank" rel="noopener">Linkedin</a>
+        </li>
+      </ul>
     </div>
+  </div>
 
-    <div class="mail">
-      <a href="mailto:hello@nicolasbertolino.com">Mail</a>
-    </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script>
+    gsap.from(".line > *", 1.8, {
+      y: 50,
+      ease: "power4.out",
+      skewY: 10,
+      stagger: {
+        amount: 0.4,
+      },
+    });
+  </script>
+</body>
 
-    <footer>
-      <div>Nicolas Bertolino 2022©</div>
-      <div class="socials">
-        <ul>
-          <li>
-            <a href="https://github.com/nicolasbertolino" target="_blank" rel="noopener">Github</a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/nicolasbertolino" target="_blank" rel="noopener">Linkedin</a>
-          </li>
-          <li>
-            <a href="files/curriculum-vitae.pdf" target="_blank">Curriculum Vitae</a>
-          </li>
-        </ul>
-      </div>
-    </footer>
-
-    <!-- Scripts -->
-    <script src="https://unpkg.com/@barba/core"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-    <script src="js/main.js"></script>
-  </body>
 </html>
