--- a/index.html
+++ b/index.html
@@ -46,16 +46,19 @@
     </p>
     <ul>
       <li class="line">
-        <a href="https://www.carbonfreeconf.com/" target="_blank" rel="noopener">CarbonFreeConf (2018)</a>
+        <a href="https://www.technal.com/fr-fr/particuliers" target="_blank" rel="noopener">Technal (2023) —Vue.js 3, Nuxt3, Typescript, HTML, Sass</a>
       </li>
       <li class="line">
-        <a href="https://www.nicolasbertolino.com/vente-immobilier/" target="_blank" rel="noopener">Vente immobilier - réplique (2020)</a>
+        <a href="https://www.yellohvillage.fr/" target="_blank" rel="noopener">Yelloh! Village (2022) —React, HTML, Sass</a>
       </li>
       <li class="line">
-        <a href="https://www.nicolasbertolino.com/demenagements-aubin/" target="_blank" rel="noopener">Déménagements Aubin - réplique (2020)</a>
+        <a href="https://www.nicolasbertolino.com/demenagements-aubin/" target="_blank" rel="noopener">Déménagements Aubin - réplique (2020) —HTML, Sass, PHP Twig</a>
       </li>
       <li class="line">
-        <a href="https://www.technal.com/fr-fr/particuliers" target="_blank" rel="noopener">Technal (2023)</a>
+        <a href="https://www.nicolasbertolino.com/vente-immobilier/" target="_blank" rel="noopener">Vente immobilier - réplique (2020) —HTML, Sass, PHP Twig</a>
+      </li>
+      <li class="line">
+        <a href="https://www.carbonfreeconf.com/" target="_blank" rel="noopener">CarbonFreeConf (2018) —HTML, Sass, Django</a>
       </li>
     </ul>
   </main>
