highlight major stacks

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     </p>
     <ul>
       <li class="line">
-        <a href="https://www.technal.com/fr-fr/particuliers" target="_blank" rel="noopener">Technal (2023) —Vue.js 3, Nuxt3, Typescript, HTML, Sass</a>
+        <a href="https://www.technal.com/fr-fr/particuliers" target="_blank" rel="noopener">Technal (2023) —<b>Vue.js 3, Nuxt3, Typescript</b>, HTML, Sass</a>
       </li>
       <li class="line">
-        <a href="https://www.yellohvillage.fr/" target="_blank" rel="noopener">Yelloh! Village (2022) —React, HTML, Sass</a>
+        <a href="https://www.yellohvillage.fr/" target="_blank" rel="noopener">Yelloh! Village (2022) —<b>React</b>, HTML, Sass</a>
       </li>
       <li class="line">
         <a href="https://www.nicolasbertolino.com/demenagements-aubin/" target="_blank" rel="noopener">Déménagements Aubin - réplique (2020) —HTML, Sass, PHP Twig</a>
