--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
     </p>
     <ul>
       <li class="line">
+        <a href="https://www.glacieralessandro.fr/" target="_blank" rel="noopener">Glacier Alessandro (2025) —<b>WordPress</b>, HTML, CSS</a>
+      </li>
+      <li class="line">
         <a href="https://www.technal.com/fr-fr/particuliers" target="_blank" rel="noopener">Technal (2023) —<b>Vue.js 3, Nuxt3, Typescript</b>, HTML, Sass</a>
       </li>
       <li class="line">
